fixing array substitution..., fixing catching logic